Added Gobnilp. Fixed problem with MMHC. Added support for totaly arbitrary combination of data dimensions.

--- a/benchmark/plot.ipynb
+++ b/benchmark/plot.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Order MCMC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -71,6 +78,13 @@
    "outputs": [],
    "source": [
     "sumROC_order_mcmc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PC algorithm"
    ]
   },
   {
@@ -122,10 +136,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Max-Min hill climbing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "filenames <- list.files(pattern = \"^(res_mmhc)\", path = directory)\n",
     "roc_mmhc <- data.frame()\n",
@@ -167,6 +186,13 @@
    "outputs": [],
    "source": [
     "sum_roc_mmhc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterative MCMC"
    ]
   },
   {
@@ -219,6 +245,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Blip"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -248,7 +281,7 @@
    "outputs": [],
    "source": [
     "sum_roc_blip <- ROCdf_blip %>% \n",
-    "                 group_by(algorithm, sample_size, dim) %>% \n",
+    "                 group_by(algorithm, sample_size, dim, time) %>% \n",
     "                 summarise(TPR_mean = mean(TPR), \n",
     "                          TPR_median = median(TPR), \n",
     "                          FPRn_median = median(FPRn), \n",
@@ -264,6 +297,61 @@
    "outputs": [],
    "source": [
     "sum_roc_blip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GoBNiLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames <- list.files(pattern = \"^(res_gobnilp)\", path = directory)\n",
+    "ROCdf_gobnilp <- data.frame()\n",
+    "for (filename in filenames) {\n",
+    "  tmpdf <- read.csv(file.path(directory, filename))\n",
+    "  ROCdf_gobnilp <- dplyr::bind_rows(ROCdf_gobnilp, tmpdf)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROCdf_gobnilp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum_roc_gobnilp <- ROCdf_gobnilp %>% \n",
+    "                 group_by(algorithm, sample_size, dim) %>% \n",
+    "                 summarise(TPR_mean = mean(TPR), \n",
+    "                          TPR_median = median(TPR), \n",
+    "                          FPRn_median = median(FPRn), \n",
+    "                          TPR_q1 = quantile(TPR, probs = c(0.05)),\n",
+    "                          TPR_q3 = quantile(TPR, probs = c(0.95)),\n",
+    "                          N = n())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum_roc_gobnilp"
    ]
   },
   {
@@ -394,8 +482,25 @@
     "               col = algorithm, \n",
     "               shape = algorithm), \n",
     "               size = 1) +\n",
+    "# Gobnilp\n",
+    "geom_errorbar(data = sum_roc_gobnilp,\n",
+    "              aes(x = FPRn_median,\n",
+    "                  ymin = TPR_q1, \n",
+    "                  ymax = TPR_q3, \n",
+    "                  col = algorithm), \n",
+    "              width = 0.01) +\n",
+    "geom_path(data = sum_roc_gobnilp,\n",
+    "          aes(x = FPRn_median, \n",
+    "              y = TPR_median,\n",
+    "              col = algorithm)) +\n",
+    "geom_point(data = sum_roc_gobnilp,\n",
+    "           aes(x = FPRn_median, \n",
+    "               y = TPR_median,               \n",
+    "               col = algorithm, \n",
+    "               shape = algorithm), \n",
+    "               size = 1) +\n",
     "## Subplot\n",
-    "facet_wrap(~ dim + sample_size, scales=\"free\") +\n",
+    "facet_wrap( dim ~ sample_size + N, scales=\"free\") +\n",
     "# Titles and stuff\n",
     "xlab(\"FPRn\") +\n",
     "ylab(\"TPR\") +\n",
@@ -459,6 +564,13 @@
     "               col = algorithm, \n",
     "               label=threshold))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -473,7 +585,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
