Temporarily commenting out gobnilp

--- a/benchmark/plot.ipynb
+++ b/benchmark/plot.ipynb
@@ -456,7 +456,7 @@
    "source": [
     "#sum_roc_gobnilp <- ROCdf_gobnilp %>% \n",
     "#                filter(dim %in% dims) %>%\n",
-    "3                    filter(sample_size %in% sample_sizes) %>%\n",
+    "#                    filter(sample_size %in% sample_sizes) %>%\n",
     "#                    filter(avparents %in% avparents) %>%          \n",
     "#                filter(replicate %in% replicates) %>%\n",
     "#                   group_by(algorithm, sample_size, dim, avparents, palim) %>% \n",
