Temporarily commenting out gobnilp

--- a/benchmark/plot.ipynb
+++ b/benchmark/plot.ipynb
@@ -477,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum_roc_gobnilp"
+    "#sum_roc_gobnilp"
    ]
   },
   {
@@ -659,22 +659,22 @@
     "               shape = algorithm), \n",
     "               size = 1) +\n",
     "# Gobnilp\n",
-    "geom_errorbar(data = sum_roc_gobnilp,\n",
-    "               aes(x = FPRn_median,\n",
-    "                   ymin = TPR_q1, \n",
-    "                   ymax = TPR_q3, \n",
-    "                   col = algorithm), \n",
-    "               width = 0.01) +\n",
-    " geom_path(data = sum_roc_gobnilp,\n",
-    "           aes(x = FPRn_median, \n",
-    "               y = TPR_median,\n",
-    "               col = algorithm)) +\n",
-    " geom_point(data = sum_roc_gobnilp,\n",
-    "            aes(x = FPRn_median, \n",
-    "                y = TPR_median,               \n",
-    "                col = algorithm, \n",
-    "                shape = algorithm), \n",
-    "                size = 1) +\n",
+    "#geom_errorbar(data = sum_roc_gobnilp,\n",
+    "#               aes(x = FPRn_median,\n",
+    "#                   ymin = TPR_q1, \n",
+    "#                   ymax = TPR_q3, \n",
+    "#                   col = algorithm), \n",
+    "#               width = 0.01) +\n",
+    "# geom_path(data = sum_roc_gobnilp,\n",
+    "#           aes(x = FPRn_median, \n",
+    "#               y = TPR_median,\n",
+    "#               col = algorithm)) +\n",
+    "# geom_point(data = sum_roc_gobnilp,\n",
+    "#            aes(x = FPRn_median, \n",
+    "#                y = TPR_median,               \n",
+    "#                col = algorithm, \n",
+    "#                shape = algorithm), \n",
+    "#                size = 1) +\n",
     "## Subplot\n",
     "facet_wrap(dim ~ sample_size + N + avparents, scales=\"free_x\") +\n",
     "# Titles etc\n",
