Fixed bug in temporary gobnilp files. Jupyter plotting for roc curves works.

--- a/benchmark/plot.ipynb
+++ b/benchmark/plot.ipynb
@@ -3100,18 +3100,18 @@
     }
    ],
    "source": [
-    "ggplot() + \n",
-    "geom_point(data = sumROC_order_mcmc,\n",
-    "          aes(x = algorithm,\n",
-    "              y = logscore_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_text(data = sumROC_order_mcmc,\n",
-    "          aes(x = algorithm, \n",
-    "               y = logscore_mean,               \n",
-    "                col = algorithm, label=threshold),\n",
-    "            check_overlap = TRUE,\n",
-    "           nudge_x=0.2,\n",
-    "          nudge_y=0.9) +\n",
+    "#ggplot() + \n",
+    "#geom_point(data = sumROC_order_mcmc,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = logscore_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_text(data = sumROC_order_mcmc,\n",
+    "#          aes(x = algorithm, \n",
+    "#               y = logscore_mean,               \n",
+    "#                col = algorithm, label=threshold),\n",
+    "#            check_overlap = TRUE,\n",
+    "#           nudge_x=0.2,\n",
+    "#          nudge_y=0.9) +\n",
     "\n",
     "#geom_point(data = sum_roc_pcalg,\n",
     "#          aes(x = algorithm,\n",
@@ -3121,20 +3121,21 @@
     "#          aes(x = algorithm,\n",
     "#              y = logscore_mean,\n",
     "#              col = algorithm)) +\n",
-    "geom_point(data = sum_roc_blip,\n",
-    "          aes(x = algorithm,\n",
-    "              y = logscore_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_point(data = sum_roc_itsearch,\n",
-    "          aes(x = algorithm,\n",
-    "              y = logscore_mean,\n",
-    "              col = algorithm)) +\n",
-    "theme(axis.text.x = element_text(angle = 10),\n",
-    "      legend.position = \"none\") +\n",
-    "facet_wrap(. ~ labels, scales=\"free_y\") +\n",
-    "ylab(\"Mean log-score\") +\n",
-    "xlab(\"Algorithm\") +\n",
-    "ggsave(file=file.path(\"logscore.eps\"))\n"
+    "\n",
+    "#geom_point(data = sum_roc_blip,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = logscore_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_point(data = sum_roc_itsearch,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = logscore_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#theme(axis.text.x = element_text(angle = 10),\n",
+    "#      legend.position = \"none\") +\n",
+    "#facet_wrap(. ~ labels, scales=\"free_y\") +\n",
+    "#ylab(\"Mean log-score\") +\n",
+    "#xlab(\"Algorithm\") +\n",
+    "#ggsave(file=file.path(\"logscore.eps\"))\n"
    ]
   },
   {
@@ -3824,56 +3825,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggplot() + \n",
-    "geom_point(data = sumROC_order_mcmc,\n",
-    "          aes(x = algorithm,\n",
-    "              y = SHD_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_text(data = sumROC_order_mcmc,\n",
-    "          aes(x = algorithm, \n",
-    "               y = SHD_mean,               \n",
-    "                col = algorithm, label=threshold),\n",
-    "            check_overlap = TRUE,\n",
-    "           nudge_x=0.2,\n",
-    "          nudge_y=0.9) +\n",
+    "#ggplot() + \n",
+    "#geom_point(data = sumROC_order_mcmc,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = SHD_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_text(data = sumROC_order_mcmc,\n",
+    "#          aes(x = algorithm, \n",
+    "#               y = SHD_mean,               \n",
+    "#                col = algorithm, label=threshold),\n",
+    "#            check_overlap = TRUE,\n",
+    "#           nudge_x=0.2,\n",
+    "#          nudge_y=0.9) +\n",
     "\n",
-    "geom_point(data = sum_roc_pcalg,\n",
-    "          aes(x = algorithm,\n",
-    "              y = SHD_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_text(data = sum_roc_pcalg,\n",
-    "          aes(x = algorithm, \n",
-    "               y = SHD_mean,               \n",
-    "                col = algorithm, label=alpha),\n",
-    "            check_overlap = TRUE,\n",
-    "           nudge_x=0.2,\n",
-    "          nudge_y=0.9) +\n",
+    "#geom_point(data = sum_roc_pcalg,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = SHD_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_text(data = sum_roc_pcalg,\n",
+    "#          aes(x = algorithm, \n",
+    "#               y = SHD_mean,               \n",
+    "#                col = algorithm, label=alpha),\n",
+    "#            check_overlap = TRUE,\n",
+    "#           nudge_x=0.2,\n",
+    "#          nudge_y=0.9) +\n",
     "\n",
-    "geom_point(data = sum_roc_mmhc,\n",
-    "          aes(x = algorithm,\n",
-    "              y = SHD_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_text(data = sum_roc_mmhc,\n",
-    "          aes(x = algorithm, \n",
-    "               y = SHD_mean,               \n",
-    "                col = algorithm, label=alpha),\n",
-    "            check_overlap = TRUE,\n",
-    "           nudge_x=0.2,\n",
-    "          nudge_y=0.9) +\n",
+    "#geom_point(data = sum_roc_mmhc,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = SHD_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_text(data = sum_roc_mmhc,\n",
+    "#          aes(x = algorithm, \n",
+    "#               y = SHD_mean,               \n",
+    "#                col = algorithm, label=alpha),\n",
+    "#            check_overlap = TRUE,\n",
+    "#           nudge_x=0.2,\n",
+    "#          nudge_y=0.9) +\n",
     "\n",
-    "geom_point(data = sum_roc_blip,\n",
-    "          aes(x = algorithm,\n",
-    "              y = SHD_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_point(data = sum_roc_itsearch,\n",
-    "          aes(x = algorithm,\n",
-    "              y = SHD_mean,\n",
-    "              col = algorithm)) +\n",
-    "theme(axis.text.x = element_text(angle = 15), legend.position = \"none\") +\n",
-    "facet_wrap(. ~ labels, scales=\"free_x\") +\n",
-    "ylab(\"Mean SHD\") +\n",
-    "xlab(\"Algorithm\") \n",
-    "ggsave(file=file.path(\"SHD.eps\"))"
+    "#geom_point(data = sum_roc_blip,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = SHD_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_point(data = sum_roc_itsearch,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = SHD_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#theme(axis.text.x = element_text(angle = 15), legend.position = \"none\") +\n",
+    "#facet_wrap(. ~ labels, scales=\"free_x\") +\n",
+    "#ylab(\"Mean SHD\") +\n",
+    "#xlab(\"Algorithm\") \n",
+    "#ggsave(file=file.path(\"SHD.eps\"))"
    ]
   },
   {
@@ -3896,18 +3897,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggplot() + \n",
-    "geom_point(data = sumROC_order_mcmc,\n",
-    "          aes(x = algorithm,\n",
-    "              y = logscore_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_text(data = sumROC_order_mcmc,\n",
-    "          aes(x = algorithm, \n",
-    "               y = logscore_mean,               \n",
-    "                col = algorithm, label=threshold),\n",
-    "            check_overlap = TRUE,\n",
-    "           nudge_x=0.2,\n",
-    "          nudge_y=0.9) +\n",
+    "#ggplot() + \n",
+    "#geom_point(data = sumROC_order_mcmc,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = logscore_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_text(data = sumROC_order_mcmc,\n",
+    "#          aes(x = algorithm, \n",
+    "#               y = logscore_mean,               \n",
+    "#                col = algorithm, label=threshold),\n",
+    "#            check_overlap = TRUE,\n",
+    "#           nudge_x=0.2,\n",
+    "#          nudge_y=0.9) +\n",
     "\n",
     "#geom_point(data = sum_roc_pcalg,\n",
     "#          aes(x = algorithm,\n",
@@ -3917,20 +3918,20 @@
     "#          aes(x = algorithm,\n",
     "#              y = logscore_mean,\n",
     "#              col = algorithm)) +\n",
-    "geom_point(data = sum_roc_blip,\n",
-    "          aes(x = algorithm,\n",
-    "              y = logscore_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_point(data = sum_roc_itsearch,\n",
-    "          aes(x = algorithm,\n",
-    "              y = logscore_mean,\n",
-    "              col = algorithm)) +\n",
-    "theme(axis.text.x = element_text(angle = 10),\n",
-    "      legend.position = \"none\") +\n",
-    "facet_wrap(. ~ labels, scales=\"free_y\") +\n",
-    "ylab(\"Mean log-score\") +\n",
-    "xlab(\"Algorithm\") +\n",
-    "ggsave(file=file.path(\"logscore.eps\"))\n"
+    "#geom_point(data = sum_roc_blip,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = logscore_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_point(data = sum_roc_itsearch,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = logscore_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#theme(axis.text.x = element_text(angle = 10),\n",
+    "#      legend.position = \"none\") +\n",
+    "#facet_wrap(. ~ labels, scales=\"free_y\") +\n",
+    "#ylab(\"Mean log-score\") +\n",
+    "#xlab(\"Algorithm\") +\n",
+    "#ggsave(file=file.path(\"logscore.eps\"))\n"
    ]
   },
   {
@@ -3946,40 +3947,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggplot() + \n",
-    "geom_point(data = sumROC_order_mcmc,\n",
-    "          aes(x = algorithm,\n",
-    "              y = time_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_point(data = sum_roc_pcalg,\n",
-    "          aes(x = algorithm,\n",
-    "              y = time_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_text(data = sum_roc_pcalg,\n",
-    "          aes(x = algorithm, \n",
-    "               y = time_mean,               \n",
-    "                col = algorithm, label=alpha),\n",
-    "            check_overlap = TRUE,\n",
-    "           nudge_x=0.2,\n",
-    "          nudge_y=0.9) +\n",
+    "#ggplot() + \n",
+    "#geom_point(data = sumROC_order_mcmc,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = time_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_point(data = sum_roc_pcalg,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = time_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_text(data = sum_roc_pcalg,\n",
+    "#          aes(x = algorithm, \n",
+    "#               y = time_mean,               \n",
+    "#                col = algorithm, label=alpha),\n",
+    "#            check_overlap = TRUE,\n",
+    "#           nudge_x=0.2,\n",
+    "#          nudge_y=0.9) +\n",
     "\n",
-    "geom_point(data = sum_roc_mmhc,\n",
-    "          aes(x = algorithm,\n",
-    "              y = time_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_point(data = sum_roc_blip,\n",
-    "          aes(x = algorithm,\n",
-    "              y = time_mean,\n",
-    "              col = algorithm)) +\n",
-    "geom_point(data = sum_roc_itsearch,\n",
-    "          aes(x = algorithm,\n",
-    "              y = time_mean,\n",
-    "             col = algorithm)) +\n",
-    "theme(axis.text.x = element_text(angle = 10), legend.position = \"none\") +\n",
-    "facet_wrap(dim ~ sample_size + N + avparents, scales=\"free_x\") +\n",
-    "ylab(\"Mean run time (s)\") +\n",
-    "xlab(\"Algorithm\") \n",
-    "ggsave(file=file.path(\"runtimes.eps\"))"
+    "#geom_point(data = sum_roc_mmhc,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = time_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_point(data = sum_roc_blip,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = time_mean,\n",
+    "#              col = algorithm)) +\n",
+    "#geom_point(data = sum_roc_itsearch,\n",
+    "#          aes(x = algorithm,\n",
+    "#              y = time_mean,\n",
+    "#             col = algorithm)) +\n",
+    "#theme(axis.text.x = element_text(angle = 10), legend.position = \"none\") +\n",
+    "#facet_wrap(dim ~ sample_size + N + avparents, scales=\"free_x\") +\n",
+    "#ylab(\"Mean run time (s)\") +\n",
+    "#xlab(\"Algorithm\") \n",
+    "#ggsave(file=file.path(\"runtimes.eps\"))"
    ]
   },
   {
