--- a/workflow/rules/structure_learning_algorithms/bnlearn_tabu/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/bnlearn_tabu/bibtex.bib
@@ -1,6 +1,6 @@
 @article{norvig2002modern,
   title={A modern approach},
-  author={Norvig, P Russel and Intelligence, S Artificial},
+  author={Norvig, P Russel, S},
   journal={Prentice Hall Upper Saddle River, NJ, USA: Rani, M., Nayak, R., \& Vyas, OP (2015). An ontology-based adaptive personalized e-learning system, assisted by software agents on cloud storage. Knowledge-Based Systems},
   volume={90},
   pages={33--48},
