Updating docs, again..

--- a/workflow/rules/parameters/bdgraph_rgwish/bibtex.bib
+++ b/workflow/rules/parameters/bdgraph_rgwish/bibtex.bib
@@ -1,3 +1,15 @@
+@article{lenkoski2013direct,
+  title={A direct sampler for G-Wishart variates},
+  author={Lenkoski, Alex},
+  journal={Stat},
+  volume={2},
+  number={1},
+  pages={119--128},
+  year={2013},
+  publisher={Wiley Online Library},
+  url={https://onlinelibrary.wiley.com/doi/10.1002/sta4.23}  
+}
+
 @article{JSSv089i03,
  title={BDgraph: An R Package for Bayesian Structure Learning in Graphical Models},
  volume={89},
