--- a/workflow/rules/structure_learning_algorithms/bdgraph/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/bdgraph/bibtex.bib
@@ -9,3 +9,41 @@
  year={2019},
  pages={1–30}
 }
+
+@article{mohammadi2015bayesian,
+  title={Bayesian structure learning in sparse Gaussian graphical models},
+  author={Mohammadi, Abdolreza and Wit, Ernst C},
+  journal={Bayesian Analysis},
+  volume={10},
+  number={1},
+  pages={109--138},
+  year={2015},
+  publisher={International Society for Bayesian Analysis},
+  url={https://projecteuclid.org/journals/bayesian-analysis/volume-10/issue-1/Bayesian-Structure-Learning-in-Sparse-Gaussian-Graphical-Models/10.1214/14-BA889.full}
+}
+
+@article{doi:10.1080/01621459.2021.1996377,
+author = {Reza Mohammadi and Hélène Massam and Gérard Letac},
+title = {Accelerating Bayesian Structure Learning in Sparse Gaussian Graphical Models},
+journal = {Journal of the American Statistical Association},
+volume = {0},
+number = {0},
+pages = {1-14},
+year  = {2021},
+publisher = {Taylor & Francis},
+URL = {https://doi.org/10.1080/01621459.2021.1996377}
+}
+
+@article{10.1214/18-AOAS1164,
+author = {Adrian Dobra and Reza Mohammadi},
+title = {{Loglinear model selection and human mobility}},
+volume = {12},
+journal = {The Annals of Applied Statistics},
+number = {2},
+publisher = {Institute of Mathematical Statistics},
+pages = {815 -- 845},
+keywords = {Bayesian structural learning, Birth–death processes, Contingency tables, graphical models, human mobility, Model selection, pseudo-likelihood},
+year = {2018},
+URL = {https://doi.org/10.1214/18-AOAS1164}
+}
+
