--- a/workflow/rules/data/gcastle_iidsim/bibtex.bib
+++ b/workflow/rules/data/gcastle_iidsim/bibtex.bib
@@ -4,5 +4,6 @@
   year={2021},
   eprint={2111.15155},
   archivePrefix={arXiv},
-  primaryClass={cs.LG}
+  primaryClass={cs.LG},
+  url={https://github.com/huawei-noah/trustworthyAI/tree/master/gcastle}
 }
