--- a/workflow/rules/structure_learning_algorithms/bidag_order_mcmc/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/bidag_order_mcmc/bibtex.bib
@@ -1,3 +1,16 @@
+
+@article{friedman2003being,
+  title={Being Bayesian about network structure. A Bayesian approach to structure discovery in Bayesian networks},
+  author={Friedman, Nir and Koller, Daphne},
+  journal={Machine learning},
+  volume={50},
+  number={1},
+  pages={95--125},
+  year={2003},
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1023/A:1020249912095#article-info}
+}
+
 @article{doi:10.1080/10618600.2021.2020127,
 author = {Jack Kuipers and Polina Suter and Giusi Moffa},
 title = {Efficient Sampling and Structure Learning of Bayesian Networks},
@@ -7,7 +20,6 @@ number = {3},
 pages = {639-650},
 year  = {2022},
 publisher = {Taylor & Francis},
-URL = { https://doi.org/10.1080/10618600.2021.2020127},
+URL = { https://doi.org/10.1080/10618600.2021.2020127}
 }
-
 
