Updating alg info.

--- a/workflow/rules/structure_learning_algorithms/bnlearn_tabu/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/bnlearn_tabu/bibtex.bib
@@ -1,3 +1,15 @@
+@article{scutari2019learning,
+  title={Learning Bayesian networks from big data with greedy search: computational complexity and efficient implementation},
+  author={Scutari, Marco and Vitolo, Claudia and Tucker, Allan},
+  journal={Statistics and Computing},
+  volume={29},
+  number={5},
+  pages={1095--1108},
+  year={2019},
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1007/s11222-019-09857-1}
+}
+
 @article{norvig2002modern,
   title={A modern approach},
   author={Norvig, P Russel, S},
