--- a/workflow/rules/structure_learning_algorithms/bnlearn_iambfdr/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/bnlearn_iambfdr/bibtex.bib
@@ -1,10 +1,15 @@
-@inproceedings{tsamardinos2003algorithms,
-  title={Algorithms for large scale Markov blanket discovery.},
-  author={Tsamardinos, Ioannis and Aliferis, Constantin F and Statnikov, Alexander R and Statnikov, Er},
-  booktitle={FLAIRS conference},
-  volume={2},
-  pages={376--380},
-  year={2003},
-  organization={St. Augustine, FL},
-  url={https://www.aaai.org/Papers/FLAIRS/2003/Flairs03-073.pdf?ref=https://githubhelp.com}
+@InProceedings{10.1007/978-3-540-78757-0_15,
+author="Pe{\~{n}}a, Jose M.",
+editor="Marchiori, Elena
+and Moore, Jason H.",
+title="Learning Gaussian Graphical Models of Gene Networks with False Discovery Rate Control",
+booktitle="Evolutionary Computation, Machine Learning and Data Mining in Bioinformatics",
+year="2008",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="165--176",
+abstract="In many cases what matters is not whether a false discovery is made or not but the expected proportion of false discoveries among all the discoveries made, i.e. the so-called false discovery rate (FDR). We present an algorithm aiming at controlling the FDR of edges when learning Gaussian graphical models (GGMs). The algorithm is particularly suitable when dealing with more nodes than samples, e.g. when learning GGMs of gene networks from gene expression data. We illustrate this on the Rosetta compendium [8].",
+isbn="978-3-540-78757-0",
+url="https://link.springer.com/chapter/10.1007/978-3-540-78757-0_15"
 }
+
