--- a/workflow/rules/structure_learning_algorithms/gcastle_ica_lingam/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/gcastle_ica_lingam/bibtex.bib
@@ -10,5 +10,6 @@ abstract = {In recent years, several methods have been proposed for the discover
 journal = {J. Mach. Learn. Res.},
 month = {dec},
 pages = {2003–2030},
-numpages = {28}
+numpages = {28},
+url={https://www.jmlr.org/papers/v7/shimizu06a.html}
 }
