--- a/workflow/rules/structure_learning_algorithms/tetrad_lingam/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/tetrad_lingam/bibtex.bib
@@ -16,5 +16,6 @@
   number={2},
   pages={205--207},
   year={2002},
-  publisher={INFORMATICS AND CONTROL PUBLICATIONS}
+  publisher={INFORMATICS AND CONTROL PUBLICATIONS},
+  url={https://www.amazon.com/Independent-Component-Analysis-Aapo-Hyv%C3%A4rinen/dp/047140540X}
 }
