Updating tetrad_grasp docs.

--- a/workflow/rules/structure_learning_algorithms/tetrad_grasp/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/tetrad_grasp/bibtex.bib
@@ -1,29 +1,9 @@
-@phdthesis{meek1997graphical,
-  title={Graphical Models: Selecting causal and statistical models},
-  author={Meek, Christopher},
-  year={1997},
-  school={PhD thesis, Carnegie Mellon University}
-}
-
-@article{chickering2002optimal,
-  title={Optimal structure identification with greedy search},
-  author={Chickering, David Maxwell},
-  journal={Journal of machine learning research},
-  volume={3},
-  number={Nov},
-  pages={507--554},
-  year={2002},
-  url             = {https://www.jmlr.org/papers/volume3/chickering02b/chickering02b.pdf?ref=https://githubhelp.com}
-}
-
-@article{ramsey2017million,
-  title={A million variables and more: the fast greedy equivalence search algorithm for learning high-dimensional graphical causal models, with an application to functional magnetic resonance images},
-  author={Ramsey, Joseph and Glymour, Madelyn and Sanchez-Romero, Ruben and Glymour, Clark},
-  journal={International journal of data science and analytics},
-  volume={3},
-  number={2},
-  pages={121--129},
-  year={2017},
-  publisher={Springer},
-  url             = {https://link.springer.com/article/10.1007/s41060-016-0032-z}
+@inproceedings{lam2022greedy,
+  title={Greedy relaxations of the sparsest permutation algorithm},
+  author={Lam, Wai-Yin and Andrews, Bryan and Ramsey, Joseph},
+  booktitle={Uncertainty in Artificial Intelligence},
+  pages={1052--1062},
+  year={2022},
+  organization={PMLR},
+  url={https://proceedings.mlr.press/v180/lam22a.html}
 }
