Adding equsa_psilearner (#78)
* Updating equsa_psilearner docs.

--- a/workflow/rules/structure_learning_algorithms/equsa_psilearner/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/equsa_psilearner/bibtex.bib
@@ -6,9 +6,9 @@
   number={511},
   pages={1248--1265},
   year={2015},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  url={https://www.jstor.org/stable/24739721}
 }
-
 
 @article{liang2008estimating,
   title={Estimating the false discovery rate using the stochastic approximation algorithm},
@@ -18,5 +18,6 @@
   number={4},
   pages={961--977},
   year={2008},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url = {https://www.jstor.org/stable/20441518},
 }
