Setting proper output graph for PAG algs in docs.

--- a/workflow/rules/structure_learning_algorithms/causaldag_gsp/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/causaldag_gsp/bibtex.bib
@@ -1,20 +1,32 @@
 @article{10.1093/biomet/asaa104,
-    author = {Solus, L and Wang, Y and Uhler, C},
-    title = "{Consistency guarantees for greedy permutation-based causal inference algorithms}",
-    journal = {Biometrika},
-    volume = {108},
-    number = {4},
-    pages = {795-814},
-    year = {2021},
-    month = {01},
-    abstract = "{Directed acyclic graphical models are widely used to represent complex causal systems. Since the basic task of learning such a model from data is NP-hard, a standard approach is greedy search over the space of directed acyclic graphs or Markov equivalence classes of directed acyclic graphs. As the space of directed acyclic graphs on \\$p\\$ nodes and the associated space of Markov equivalence classes are both much larger than the space of permutations, it is desirable to consider permutation-based greedy searches. Here, we provide the first consistency guarantees, both uniform and high dimensional, of a greedy permutation-based search. This search corresponds to a simplex-like algorithm operating over the edge-graph of a subpolytope of the permutohedron, called a directed acyclic graph associahedron. Every vertex in this polytope is associated with a directed acyclic graph, and hence with a collection of permutations that are consistent with the directed acyclic graph ordering. A walk is performed on the edges of the polytope maximizing the sparsity of the associated directed acyclic graphs. We show via simulated and real data that this permutation search is competitive with current approaches.}",
-    issn = {0006-3444},
-    url = {https://doi.org/10.1093/biomet/asaa104}
+  author   = {Solus, L and Wang, Y and Uhler, C},
+  title    = {{Consistency guarantees for greedy permutation-based causal inference algorithms}},
+  journal  = {Biometrika},
+  volume   = {108},
+  number   = {4},
+  pages    = {795-814},
+  year     = {2021},
+  month    = {01},
+  abstract = {{Directed acyclic graphical models are widely used to represent complex causal systems. Since the basic task of learning such a model from data is NP-hard, a standard approach is greedy search over the space of directed acyclic graphs or Markov equivalence classes of directed acyclic graphs. As the space of directed acyclic graphs on \\$p\\$ nodes and the associated space of Markov equivalence classes are both much larger than the space of permutations, it is desirable to consider permutation-based greedy searches. Here, we provide the first consistency guarantees, both uniform and high dimensional, of a greedy permutation-based search. This search corresponds to a simplex-like algorithm operating over the edge-graph of a subpolytope of the permutohedron, called a directed acyclic graph associahedron. Every vertex in this polytope is associated with a directed acyclic graph, and hence with a collection of permutations that are consistent with the directed acyclic graph ordering. A walk is performed on the edges of the polytope maximizing the sparsity of the associated directed acyclic graphs. We show via simulated and real data that this permutation search is competitive with current approaches.}},
+  issn     = {0006-3444},
+  url      = {https://doi.org/10.1093/biomet/asaa104}
 }
 
 @manual{squires2018causaldag,
-  title={{{causaldag}: creation, manipulation, and learning of causal models}},
-  author={{Chandler Squires}},
-  year={2018},
-  url={https://github.com/uhlerlab/causaldag},
+  title  = {{{causaldag}: creation, manipulation, and learning of causal models}},
+  author = {{Chandler Squires}},
+  year   = {2018},
+  url    = {https://github.com/uhlerlab/causaldag}
+}
+
+@article{https://doi.org/10.1002/sta4.183,
+  author   = {Raskutti, Garvesh and Uhler, Caroline},
+  title    = {Learning directed acyclic graph models based on sparsest permutations},
+  journal  = {Stat},
+  volume   = {7},
+  number   = {1},
+  pages    = {e183},
+  keywords = {Bayesian network, causal inference, conditional independence, faithfulness, Markov property},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sta4.183},
+  year     = {2018}
 }
