finish example and confirm built docs look nice

--- a/workflow/rules/structure_learning_algorithms/grues/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/grues/bibtex.bib
@@ -1,10 +1,10 @@
 @article{grues2023,
   title =        {Combinatorial and algebraic perspectives on the
-                  marginal independence structure of Bayesian
+                  marginal independence structure of {B}ayesian
                   networks},
   author =       {Deligeorgaki, Danai and Markham, Alex and Misra,
                   Pratik and Solus, Liam},
   year =         2023,
-  publisher =    {arXiv:2210.00822 [stat.ME]},
+  journal =      {arXiv:2210.00822 [stat.ME]},
   url =          {https://arxiv.org/abs/2210.00822},
 }
