Fixing huge modules

--- a/workflow/rules/structure_learning_algorithms/huge_mb/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/huge_mb/bibtex.bib
@@ -1,16 +1,24 @@
 @article{zhao2012huge,
-  title={The huge package for high-dimensional undirected graph estimation in R},
-  author={Zhao, Tuo and Liu, Han and Roeder, Kathryn and Lafferty, John and Wasserman, Larry},
-  journal={The Journal of Machine Learning Research},
-  volume={13},
-  number={1},
-  pages={1059--1062},
-  year={2012},
-  publisher={JMLR. org}
+  title     = {The huge package for high-dimensional undirected graph estimation in R},
+  author    = {Zhao, Tuo and Liu, Han and Roeder, Kathryn and Lafferty, John and Wasserman, Larry},
+  journal   = {The Journal of Machine Learning Research},
+  volume    = {13},
+  number    = {1},
+  pages     = {1059--1062},
+  year      = {2012},
+  publisher = {JMLR. org}
 }
 
-@article{meinshausen2006high,
-  title={High-dimensional graphs and variable selection with the lasso},
-  author={Meinshausen, Nicolai and B{\"u}hlmann, Peter},
-  year={2006}
+
+@article{10.1214/009053606000000281,
+  author    = {Nicolai Meinshausen and Peter B{\"u}hlmann},
+  title     = {{High-dimensional graphs and variable selection with the Lasso}},
+  volume    = {34},
+  journal   = {The Annals of Statistics},
+  number    = {3},
+  publisher = {Institute of Mathematical Statistics},
+  pages     = {1436 -- 1462},
+  keywords  = {covariance selection, Gaussian graphical models, Linear regression, penalized regression},
+  year      = {2006},
+  url       = {https://doi.org/10.1214/009053606000000281}
 }
