Fixing huge modules

--- a/workflow/rules/structure_learning_algorithms/huge_glasso/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/huge_glasso/bibtex.bib
@@ -6,7 +6,8 @@
   number    = {1},
   pages     = {1059--1062},
   year      = {2012},
-  publisher = {JMLR. org}
+  publisher = {JMLR.org},
+  url = {https://www.jmlr.org/papers/volume13/zhao12a/zhao12a.pdf}
 }
 
 @article{friedman2008sparse,
@@ -17,5 +18,6 @@
   number    = {3},
   pages     = {432--441},
   year      = {2008},
-  publisher = {Oxford University Press}
+  publisher = {Oxford University Press},
+  url       = {https://academic.oup.com/biostatistics/article/9/3/432/224260}
 }
