--- a/workflow/rules/structure_learning_algorithms/huge_mb/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/huge_mb/bibtex.bib
@@ -6,7 +6,8 @@
   number    = {1},
   pages     = {1059--1062},
   year      = {2012},
-  publisher = {JMLR. org}
+  publisher = {JMLR.org},
+  url       = {https://www.jmlr.org/papers/volume13/zhao12a/zhao12a.pdf}
 }
 
 
