--- a/workflow/rules/structure_learning_algorithms/huge_tiger/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/huge_tiger/bibtex.bib
@@ -6,7 +6,8 @@
   number    = {1},
   pages     = {1059--1062},
   year      = {2012},
-  publisher = {JMLR. org}
+  publisher = {JMLR.org},
+    url = {https://www.jmlr.org/papers/volume13/zhao12a/zhao12a.pdf}
 }
 
 @article{liu2017tiger,
@@ -15,5 +16,6 @@
   journal = {Electronic Journal of Statistics},
   volume  = {11},
   pages   = {241--294},
-  year    = {2017}
+  year    = {2017},
+  url    = {https://projecteuclid.org/journals/electronic-journal-of-statistics/volume-11/issue-1/TIGER--A-tuning-insensitive-approach-for-optimally-estimating-Gaussian/10.1214/16-EJS1195.full}
 }
