--- a/workflow/rules/structure_learning_algorithms/mvpc/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/mvpc/bibtex.bib
@@ -1,9 +1,19 @@
-@article{mykey,
-  title={The Title},
-  author={Last name, First Name and Last name, First Name and Last name, First Name},
-  journal={Some Journal},
-  volume={11},
-  pages={1--2},
-  year={2023},
-  url={https://www.paperurl.org}
+@inproceedings{tu2019causal,
+  title={Causal discovery in the presence of missing data},
+  author={Tu, Ruibo and Zhang, Cheng and Ackermann, Paul and Mohan, Karthika and Kjellstr{\"o}m, Hedvig and Zhang, Kun},
+  booktitle={The 22nd International Conference on Artificial Intelligence and Statistics},
+  pages={1762--1770},
+  year={2019},
+  organization={Pmlr},
+  url={https://proceedings.mlr.press/v89/tu19a}
+}
+
+@misc{tu2020causald,
+      title={Causal Discovery in the Presence of Missing Data}, 
+      author={Ruibo Tu and Kun Zhang and Paul Ackermann and Bo Christer Bertilson and Clark Glymour and Hedvig Kjellström and Cheng Zhang},
+      year={2020},
+      eprint={1807.04010},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1807.04010}, 
 }
