--- a/workflow/rules/structure_learning_algorithms/bips_tpc/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/bips_tpc/bibtex.bib
@@ -1,9 +1,8 @@
-@article{mykey,
-  title={The Title},
-  author={Last name, First Name and Last name, First Name and Last name, First Name},
-  journal={Some Journal},
-  volume={11},
-  pages={1--2},
-  year={2023},
-  url={https://www.paperurl.org}
+@misc{andrews2023practicalguidecausaldiscovery,
+      title={A practical guide to causal discovery with cohort data}, 
+      author={Ryan M. Andrews and Ronja Foraita and Vanessa Didelez and Janine Witte},
+      year={2023},
+      archivePrefix={arXiv},
+      primaryClass={stat.AP},
+      url={https://arxiv.org/abs/2108.13395}, 
 }
