--- a/workflow/rules/structure_learning_algorithms/mice/bibtex.bib
+++ b/workflow/rules/structure_learning_algorithms/mice/bibtex.bib
@@ -1,9 +1,10 @@
-@article{mykey,
-  title={The Title},
-  author={Last name, First Name and Last name, First Name and Last name, First Name},
-  journal={Some Journal},
-  volume={11},
-  pages={1--2},
-  year={2023},
-  url={https://www.paperurl.org}
+@Article{mice,
+  title = {{mice}: Multivariate Imputation by Chained Equations in R},
+  author = {Stef {van Buuren} and Karin Groothuis-Oudshoorn},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {45},
+  number = {3},
+  pages = {1-67},
+  doi = {10.18637/jss.v045.i03},
 }
